--- a/src/style.css
+++ b/src/style.css
@@ -107,6 +107,9 @@ h2{
   text-align: center;
 
 }
+nav a{
+  font-size: 14px;
+}
 
     
   }
@@ -163,3 +166,34 @@ h2{
   color: #6c757d;
 
 }
+
+.logo{
+  max-height: 40px;
+}
+nav{
+  padding: 20px 0;
+}
+nav ul{
+  padding: 0;
+  margin: 0;
+}
+ nav li{
+  display: inline;
+  list-style: none;
+  line-height: 42px;
+ }
+
+ nav li.active a{
+  color: var(--branding-color);
+ }
+
+ nav a{
+  margin-left: 15px;
+  text-decoration: none;
+  color: #272142;
+  transition: all 100ms ease-in-out;
+ }
+
+ nav a:hover{
+  color: var(--branding-color);
+ }
