--- a/src/style.css
+++ b/src/style.css
@@ -40,7 +40,9 @@ p{
   h3{
     font-weight: 500;
   }
-  
+  h4{
+    font-size: 48px;
+  }
   p {
     font-weight: normal;
     font-size: 16px;
@@ -103,6 +105,15 @@ h2{
   text-align: center;
   font-size: 40px;
 }
+
+h4{
+  font-size: 18px;
+}
+
+footer .email-link{
+  font-size: 18px;
+}
+
 .yougurt-part{ 
   text-align: center;
 
@@ -110,8 +121,7 @@ h2{
 nav a{
   font-size: 14px;
 }
-
-    
+ 
   }
 
   .email-link{
@@ -196,4 +206,45 @@ nav ul{
 
  nav a:hover{
   color: var(--branding-color);
+ }
+
+ .contact-box{
+  background: var(--secondary-color);
+  padding: 30px 60px;
+  border-radius: 10px;
+ }
+ .email-link{
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
+  
+ }
+
+ .email-link:hover{
+  color: var(--branding-color);
+ }
+
+ .social-link a {
+
+  margin: 0 20px;
+  color: var(--branding-color);
+  background: var(--secondary-color);
+ padding: 10px 14px;
+  font-size: 18px ;
+  border-radius: 50%;
+ 
+  transition: all 100ms ease-in-out;
+ }
+
+ .social-link a:hover{
+  color: white;
+  background-color: var(--branding-color);
+ }
+
+ footer{
+  margin: 60px 0;
+ }
+
+ footer .contact-box p{
+  margin:0;
  }
